# fruit-counting

./: .gitignore  .gitmodules  README.md  environment-cuda.yml  environment.yml  pyproject.toml
configs/pipeline/: default.yaml
configs/train/: pseco_head.yaml
docs/presentations/: fruit_counting_insights.pptx  generate_insights_ppt.py
docs/superpowers/plans/: 2026-04-19-fruit-counting-foundation.md  2026-04-19-fruit-counting-pseco-training.md  2026-04-21-plan3-pseco-clip-objective.md
docs/superpowers/specs/: 2026-04-19-fruit-counting-redesign-design.md  2026-04-21-pseco-clip-objective-fix-design.md  2026-04-22-plan4-direction.md
models/PseCo/: clip_text_features.pt
scripts/: diag_apple_undercount.py  grid_search_thresholds.py  mae_table.py  verify_orchard.py  verify_orchard_viz.py  verify_plan3_ckpt.py
src/counting/: __init__.py  cli.py  pipeline.py
src/counting/config/: __init__.py  hashing.py  loader.py  schema.py  train_schema.py
src/counting/data/: __init__.py  base.py  cache.py  diagnostics.py  download.py
tests/: conftest.py
tests/integration/: test_pipeline_smoke.py  test_training_smoke.py
tests/unit/: test_config_hashing.py  test_config_loader.py  test_config_schema.py  test_config_train_schema.py  test_data_cache.py  test_data_fsc147.py  test_data_imagefolder.py  test_diagnostics.py  test_diagnostics_density.py  test_io_serialize.py  test_pipeline_errors.py  test_pseco_clip_features.py  test_pseco_labeling.py  test_training_callbacks.py  test_training_checkpoint.py  test_training_losses.py  test_utils_device.py  test_utils_image.py
(+26 files in other folders)
